    proofs.
  * Correctly set the application icon so that it is displayed for all windows. This is possibly
    irrelevant on some operating systems, but on Windows it ensures that the application icon
    featured in the top left-hand corner of the window is not blandly undefined but rather the
    glorious new icon that we have.
  * several cleanups and improvements to internals that increase robustness and stability

# Release 1.1.2
  * When run in portable mode, ElectrumSV would fail to correctly locate the Electron Cash
    wallets directory, and would show the portable mode ElectrumSV wallets as the Electron Cash
    wallets. The Electron Cash portable mode wallet directory is now correctly located.

# Release 1.1.1
  * Do not display raw errors from the server when the user uses the 'Tools / Load Transaction /
    From the blockchain' menu. They are now presented in a way where it is highlighted that
    the actual message can be maliciously replaced by the server, and the user needs to use their
    own good judgement to determine whether the error message is relevant or correct.
  * Added a popup help dialog for the 'Existing Electron Cash wallets detected' message, shown
    on the wallet selection page of the wizard.
  * Added a popup help dialog for the 'I already have a seed' page, shown during the wallet
    creation process in the wizard. This goes into detail about the repercussions of importing
    seeds created in Centbee, Handcash or Moneybutton/Yours, where that seed is still being
    used in those wallets. The gist is that it is not supported, and you're best to check with
    those wallets before doing it.
  * Added a popup dialog confirming how many Electron Cash wallets were imported by the user,
    which will give the user feedback that something actually happened.
  * Include the new logos and icons kindly provided by the Bitcoin Association. Thanks again to
    MrScatman (https://twitter.com/bsmith12251960) for the original icon.